Fix empty spaces in columns and spacing in subscribe section

--- a/assets/stylesheet/style.css
+++ b/assets/stylesheet/style.css
@@ -131,6 +131,9 @@ figure {
   background-color: #e9280f;
 }
 
+.ranking-articles-wrapper article{
+  height: fit-content;
+}
 .magazine img {
   width: 100%;
 }
@@ -187,8 +190,8 @@ figure {
 
 .subscribe-info h1 {
   z-index: 10;
-  background: none;
-  margin-top: -15px;
+  background: none;  
+  margin-top: 0; 
 }
 
 .footer-nw-logo img {
@@ -201,13 +204,8 @@ figure {
 
 @media screen and (min-width: 768px) {
   .subscribe-info {
-    align-items: initial;
-  }
-
-  .middle-sections-wrapper {
-    position: sticky;
-    top: 0;
-  }
+    align-items: initial;    
+  }  
 }
 
 @media screen and (min-width: 992px) {
